--- a/l200207/frontend/src/app/login/login.component.scss
+++ b/l200207/frontend/src/app/login/login.component.scss
@@ -5,35 +5,21 @@
   right:0em;
   font-size: 1.4em;
 }
-.scrollbar::-webkit-scrollbar {
-  width:0em
-}
-.scrollbar {
-  height:65em;
-  overflow-y: scroll
-}
-.overflow{min-height: auto}
-#Header{
+#loginModal{display:none}
+.loginsection{
   position:fixed;
+  top: 50%;
+  left: 50%;
+  width:30em;
+  height:auto;
+  margin-top: -9em; /*set to a negative number 1/2 of your height*/
+  margin-left: -15em; /*set to a negative number 1/2 of your width*/
+  border: 1px solid #ccc;
+  background-color: #f3f3f3;
 }
-.clicktop{
-  position: fixed;
-  bottom: 0.4em;
-  right: 0.4em;
-  font-size: 2.5em;
-}
-#democredentials{
+#closelogin{
   position: absolute;
-  bottom:0em;
-  right:0em;
-
-}
-#banerimage{
-  position: absolute;
-  top: 4em;
-}
-.demoversionClick{
-  position: absolute;
-  bottom: 1em;
-  right: 1em;
+  padding: 1em;
+  top: 0.5em;
+  left: 0.5em;
 }
