--- a/l200207/frontend/src/app/frontpage/frontpage.component.html
+++ b/l200207/frontend/src/app/frontpage/frontpage.component.html
@@ -23,7 +23,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-light" routerLink="portal"  routerLinkActive="active-link" (click)="openlogin(frame)"  mdbWavesEffect>
+              <a class="nav-link waves-light" (click)="openlogin(frame)"  mdbWavesEffect>
                 <mdb-icon fas icon="sign-in-alt"></mdb-icon> Sign In
               </a>
             </li>
