--- a/l200207/frontend/src/app/hierarchy/hierarchy.component.html
+++ b/l200207/frontend/src/app/hierarchy/hierarchy.component.html
@@ -15,7 +15,7 @@
     </mdb-navbar>
   </div>
   <!--/.Navbar-->
-  <img class="versionview" id="versionview_promode" src="../../assets/images/HRMS_LOGO190618.png" alt="HRMS">
+  <img id="versionview_promode" src="../../assets/images/HRMS_LOGO190618.png" alt="HRMS">
   <section id="backgroundRGraph" class="bg-dark">
     <div id="hierarchy"></div>
   </section>
