--- a/l200207/frontend/src/app/login/login.component.html
+++ b/l200207/frontend/src/app/login/login.component.html
@@ -12,121 +12,116 @@
             <h4 class="loginfeature font-weight-bold text-center p-3">Sign in</h4>
           </div>
           <div class="p-4">
-            <div id="login">
-              <form>
+            <form action="">
+              <div id="login">
                 <div class="md-form mb-5">
-                <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-                <input type="email"  (keydown.enter)="checkusermail()" (input)="email=$event.target.value"
-                  class="form-control" mdbInput>
-                <label for="defaultForm-email">Email</label>
+                  <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                  <input type="email" (keydown.enter)="checkusermail()" (input)="email=$event.target.value"
+                    class="form-control" mdbInput>
+                  <label for="defaultForm-email">Email</label>
                 </div>
                 <div class="md-form mb-4">
-                <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
-                <input type="password" (keydown.enter)="logincomponent('loginuser','')"
-                  (input)="password=$event.target.value" class="form-control" mdbInput>
-                <span id="password_viewhide">
-                  <i class="fas fa-eye showtext" (click)="passwordView('text','password')"></i>
-                  <i class="fas fa-eye-slash showpassword" (click)="passwordView('password','text')"></i>
-                </span>
-                <label for="defaultForm-pass">Password</label>
+                  <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
+                  <input type="password" (keydown.enter)="logincomponent('loginuser','')"
+                    (input)="password=$event.target.value" #showhide_event class="form-control" mdbInput>
+                  <span id="password_viewhide">
+                    <i class="fas fa-eye showtext" (click)="passwordView('text','password',showhide_event)"></i>
+                    <i class="fas fa-eye-slash showpassword"
+                      (click)="passwordView('password','text',showhide_event)"></i>
+                  </span>
+                  <label for="defaultForm-pass">Password</label>
                 </div>
                 <div class="row p-4">
-                <div class="col-6 text-left">
-                  <mdb-checkbox #checkbox (click)="logincomponent('remberme',checkbox)" [checked]="false"
-                    [default]="true">
-                    Remember me</mdb-checkbox>
+                  <div class="col-6 text-left">
+                    <mdb-checkbox #checkbox (click)="logincomponent('remberme',checkbox)" [checked]="false"
+                      [default]="true">
+                      Remember me</mdb-checkbox>
+                  </div>
+                  <div class="col-6 text-right">
+                    <a id="forpassword" (click)="logincomponent('forgetpassword','')" class="dark-text ml-1">Forgot
+                      Password?</a>
+                    <a class="text-success border border-success p-2" id="genpassword"
+                      (click)="logincomponent('genratepassword','')">Genrate
+                      Password</a>
+                  </div>
                 </div>
-                <div class="col-6 text-right">
-                  <a id="forpassword" (click)="logincomponent('forgetpassword','')" class="dark-text ml-1">Forgot
-                    Password?</a>
-                  <a class="text-success border border-success p-2" id="genpassword"
-                    (click)="logincomponent('genratepassword','')">Genrate
-                    Password</a>
-                </div>
-                </div>
-              </form>
-            </div>
-            <div id="Genrateotp">
-              <p class="text-center font-weight-bold">Please verify your EmailId</p>
-              <div class="md-form mb-5" id="Confirm_emailfield">
-                <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-                <input type="email" (keydown.enter)="logincomponent('getOpt','')" 
-                  (input)="forgetpassword_email=$event.target.value" class="form-control" mdbInput>
-                <label for="">Email</label>
               </div>
-              <div class="md-form mb-5" id="Login_otpinputfield">
-                <mdb-icon fas icon="key"></mdb-icon>
-                <input type="text"  class="form-control" mdbInput disabled>
-                <label for="">OTP</label>
+              <div id="Genrateotp">
+                <p class="text-center font-weight-bold">Please verify your EmailId</p>
+                <div class="md-form mb-5" id="Confirm_emailfield">
+                  <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                  <input type="email" (keydown.enter)="logincomponent('getOpt','')"
+                    (input)="forgetpassword_email=$event.target.value" class="form-control" mdbInput>
+                  <label for="">Email</label>
+                </div>
+                <div class="md-form mb-5" id="Login_otpinputfield">
+                  <mdb-icon fas icon="key"></mdb-icon>
+                  <input type="text" class="form-control" mdbInput disabled>
+                  <label for="">OTP</label>
+                </div>
+                <div id="newpassword" class="p-4">
+                  <div class="md-form p-2">
+                    <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
+                    <input type="password" (input)="createpassword=$event.target.value" class="form-control" mdbInput>
+                    <label for="">Create Password</label>
+                  </div>
+                  <div class="md-form p-2">
+                    <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
+                    <input type="password" (input)="confirmpassword=$event.target.value" class="form-control" mdbInput>
+                    <label for="">Confirm Password</label>
+                  </div>
+                </div>
+                <div class="row justify-content-center">
+                  <div class="col-3 otpbutton">
+                    <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('getOpt','')"
+                      mdbWavesEffect>Get
+                      OTP</button>
+                  </div>
+                  <div class="col-3 verifyotpbutton">
+                    <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('verifyotp','')"
+                      mdbWavesEffect>
+                      Verify</button>
+                  </div>
+                  <div class="col-3 stopotpprocess">
+                    <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('stop_otpprocess','')"
+                      mdbWavesEffect>
+                      Cancel</button>
+                  </div>
+                  <div class="col-3 newpassword_value">
+                    <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('newpasswordmode','')"
+                      mdbWavesEffect>OK</button>
+                  </div>
+                </div>
               </div>
-              <div id="newpassword" class="p-4">
+              <div id="ui_genratepassword">
+                <p class="text-center font-weight-bold">{{email}}</p>
                 <div class="md-form p-2">
                   <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
-                  <input type="password" (input)="createpassword=$event.target.value"
-                    class="form-control" mdbInput>
+                  <input type="password" (input)="gcreatepassword=$event.target.value" class="form-control" mdbInput>
                   <label for="">Create Password</label>
                 </div>
                 <div class="md-form p-2">
                   <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
-                  <input type="password" (input)="confirmpassword=$event.target.value"
-                    class="form-control" mdbInput>
+                  <input type="password" #idforgpassword name={{email}}
+                    (keydown.enter)="logincomponent('sendrequest_pass',idforgpassword.name)"
+                    (input)="gconfirmpassword_input=$event.target.value" class="form-control" mdbInput>
                   <label for="">Confirm Password</label>
                 </div>
-              </div>
-              <div class="row justify-content-center">
-                <div class="col-3 otpbutton">
-                  <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('getOpt','')"
-                    mdbWavesEffect>Get
-                    OTP</button>
-                </div>
-                <div class="col-3 verifyotpbutton">
-                  <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('verifyotp','')"
-                    mdbWavesEffect>
-                    Verify</button>
-                </div>
-                <div class="col-3 stopotpprocess">
-                  <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('stop_otpprocess','')"
-                    mdbWavesEffect>
-                    Cancel</button>
-                </div>
-                <div class="col-3 newpassword_value">
-                  <button mdbBtn color="dark" class="waves-light p-2" (click)="logincomponent('newpasswordmode','')"
-                    mdbWavesEffect>OK</button>
-                </div>
-              </div>
-            </div>
-            <div id="ui_genratepassword">
-              <p class="text-center font-weight-bold">{{email}}</p>
-              <div class="md-form p-2">
-                <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
-                <input type="password" (input)="gcreatepassword=$event.target.value"
-                  class="form-control" mdbInput>
-                <label for="">Create Password</label>
-              </div>
-              <div class="md-form p-2">
-                <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
-                <input type="password" #idforgpassword name={{email}}
-                  (keydown.enter)="logincomponent('sendrequest_pass',idforgpassword.name)" 
-                  (input)="gconfirmpassword_input=$event.target.value" class="form-control" mdbInput>
-                <label for="">Confirm Password</label>
-              </div>
 
-            </div>
-          </div>
-          <div class="p-3">
-            <div class="loginfeature">
-              <div class="row">
-                <div class="col-md-6 offset-md-4">
-                  <button mdbBtn color="dark" class="waves-light" (click)="logincomponent('loginuser','')"
-                    mdbWavesEffect>Login</button>
+              </div>
+              <div class="loginfeature">
+                <div class="row">
+                  <div class="col-md-6 offset-md-4">
+                    <button mdbBtn color="dark" class="waves-light" (click)="logincomponent('loginuser','')"
+                      mdbWavesEffect>Login</button>
+                  </div>
                 </div>
               </div>
-            </div>
+            </form>
           </div>
-
         </div>
       </div>
     </div>
   </section>
-  
+
 </div>
