--- a/l200207/frontend/src/app/frontpage/frontpage.component.html
+++ b/l200207/frontend/src/app/frontpage/frontpage.component.html
@@ -13,13 +13,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link waves-light" href="#pricingplan" mdbWavesEffect>
-                <mdb-icon fas icon="hand-holding-usd"></mdb-icon>Pricing
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link waves-light"  name="selectprice" #paymentbynavbar
-                (click)="payment('navbarclick',paymentbynavbar.name)" mdbWavesEffect>
-                <mdb-icon fas icon="shopping-cart"></mdb-icon> Buy
+                <mdb-icon fas icon="hand-holding-usd"></mdb-icon>Pricing / Purchase
               </a>
             </li>
             <li class="nav-item">
