--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
@@ -4,11 +4,49 @@
     <links>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" *ngFor="let butt of topBarElements">
-          <a class="nav-link waves-light" mdbWavesEffect [attr.href]="butt.href ? butt.href : null" (click)='butt.clickFun ? butt.clickFun() : null' *ngIf="butt.show">
+          <a class="nav-link waves-light" mdbWavesEffect [attr.href]="butt.href ? butt.href : null"
+            (click)='butt.clickFun ? butt.clickFun() : null' *ngIf="butt.show">
             <mdb-icon fas icon="{{butt.icon}}"></mdb-icon>{{butt.name}}<span class="sr-only"></span>
           </a>
         </li>
       </ul>
     </links>
   </mdb-navbar>
+  <div mdbModal #loginmodal="mdbModal" class="modal fade" tabindex="-1" role="dialog"
+    aria-labelledby="myBasicModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-md modal-side modal-top-right" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close pull-right" aria-label="Close" (click)="clicked('hideLoginModel')">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h4 class="modal-title w-100 text-center" id="myModalLabel">Sign In</h4>
+        </div>
+        <div class="modal-body">
+          <div class="md-form mb-5">
+            <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+            <input type="email" (input)="email=$event.target.value"
+              class="form-control" mdbInput>
+            <label for="defaultForm-email">Email</label>
+          </div>
+          <div class="md-form mb-4">
+            <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
+            <input type="password" 
+              (input)="password=$event.target.value" (keydown.enter)="callFunction('LOGIN')" #showhide_event class="form-control" mdbInput>
+            <span id="password_viewhide">
+              <i class="fas fa-eye showtext" (click)="passwordView('text','password',showhide_event)"></i>
+              <i class="fas fa-eye-slash showpassword"
+                (click)="passwordView('password','text',showhide_event)"></i>
+            </span>
+            <label for="defaultForm-pass">Password</label>
+          </div>
+          <a id="forpassword" (click)="clicked('forgetpassword')" class="dark-text ml-1">Forgot
+            Password?</a>
+        </div>
+        <div class="modal-footer">
+          <button type="button" mdbBtn color="dark" (click)="callFunction('LOGIN')" class="relative waves-light" mdbWavesEffect>Login</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
