--- a/l200207/frontEndCleanShrad/src/app/portal/portal.component.html
+++ b/l200207/frontEndCleanShrad/src/app/portal/portal.component.html
@@ -209,6 +209,14 @@
             </div>
           </div>
         </div>
+        <div class="row p-4">
+          <div class="col-4">
+            <span *ngIf="">
+              <i class="fas fa-user fieldicons mr-2"></i>
+              <label #usrNode_{{}} class="lblEditToggle" required></label>
+            </span>
+          </div>
+        </div>
       </div>
       <div class="modal-footer border border-white">
       </div>
