--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
@@ -12,7 +12,7 @@
       </ul>
     </links>
   </mdb-navbar>
-  <div mdbModal #loginmodal="mdbModal" class="modal fade" tabindex="-1" role="dialog"
+  <div mdbModal #loginmodal="mdbModal" class="modal fade" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog"
     aria-labelledby="myBasicModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-md modal-side modal-top-right" role="document">
       <div class="modal-content">
