--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.scss
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.scss
@@ -10,3 +10,10 @@
     right:0em;
     font-size: 1.4em;
   }
+  .modal-open .modal {
+    width: 2px;
+    margin: 0 auto;
+}
+.modal-backdrop {
+  display: none !important;
+}
