--- a/l200207/frontEndCleanShrad/src/app/portal/portal.component.scss
+++ b/l200207/frontEndCleanShrad/src/app/portal/portal.component.scss
@@ -1,5 +1,13 @@
 #backgroundRGraph{position: absolute;height: 100%;width: 100%;}
 #hierarchy{height: 100%;width: 100%;} 
+// .masterDiv{
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: -17px; /* Increase/Decrease this value for cross-browser compatibility */
+//   overflow-y: scroll;
+// }
 #buttPlus{
     position: absolute;
     right: 0.2em;
