--- a/l200207/frontEndCleanShrad/src/app/admin/admin.component.html
+++ b/l200207/frontEndCleanShrad/src/app/admin/admin.component.html
@@ -1,154 +1,8 @@
 <app-topbar></app-topbar>
 <div id="compbackground" class="bg-dark p-5">
-  <div class="row text-white font-weight-bold p-5">
-    <div class="col-lg-4 col-xs-12">
-      <p>Post <mdb-icon fas icon="briefcase"></mdb-icon>
-        <button mdbBtn type="button" size="sm" color="white" rounded="true" outline="true" (click)="default('Posts','defaultview')"
-          mdbWavesEffect>Default</button>
-      </p>
-      <div  id="defaultsection_Posts" class="defaultsection z-depth-3 defaultmode">
-        <div class="canceldefault p-2 text-right">
-          <mdb-icon fas icon="backspace"  (click)="default('Posts','defaulthide')" class="text-white"></mdb-icon>
-        </div>
-        <div class="scrollbar p-0 m-0">
-          <div class="overflow text-white text-left p-2 m-3" *ngFor="let defaultpv of exportdefaultdata.Posts">
-            <div class="row">
-              <div class="col-8">{{defaultpv.post}} </div>
-              <div class="col-4">
-                <a #postdefault name={{defaultpv.post}} (click)="defaultAdd(postdefault.name,'post','Posts')">
-                  <mdb-icon class="adddefaulticon" fas icon="plus-circle"></mdb-icon>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="viewmanual_Posts" class="z-depth-3 manualmode">
-        <div class="p-3">Add Post</div>
-        <div id="addpost">
-          <div class="row p-3">
-            <div class="col-12 col-xs-12">
-              <input mdbInput type="text" (keydown.enter)="addDatabyadminpanel('posts','post','withoutmode')" class="fieldinputData form-control" id="fid_posts" placeholder="Enter Post">
-            </div>
-          </div>
-        </div>
-        <div class="scrollbar">
-          <div *ngFor="let postmanual of exportadminpagedata.Posts" class="overflow text-white font-weight-bold">
-            <div class="row p-3">
-            <div class="col-10 col-xs-10 text-white">{{postmanual.data}}</div>
-            <div class="col-2 col-xs-2">
-              <a #removeDetail name={{postmanual.id}} (click)="removeDataadminpanel(removeDetail.name,'Posts')">
-                <mdb-icon class="deletedatainfo" fas icon="minus-circle"></mdb-icon>
-              </a>
-            </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-xs-12">
-      <!-- //(click)="default('Accesslevels','defaultview')" -->
-      <p>Dooraccess <mdb-icon fas icon="door-open"></mdb-icon>
-        <!-- <button mdbBtn type="button" size="sm" color="white" rounded="true" outline="true"
-           mdbWavesEffect>Default</button> -->
-      </p>
-      <div id="defaultsection_Accesslevels" class="defaultsection  z-depth-3 defaultmode">
-        <div class="canceldefault p-2 text-right">
-          <mdb-icon fas icon="backspace"  (click)="default('Accesslevels','defaulthide')" class="text-white"></mdb-icon>
-        </div>
-        <div class="scrollbar">
-          <div class="overflow text-white text-left p-2 m-3" *ngFor="let defaultdoor of exportdefaultdata.Accesslevels">
-            {{defaultdoor.name}}
-          </div>
-        </div>
-      </div>
-      <div id="viewmanual_Accesslevels" class="z-depth-3 manualmode">
-        <div class="p-3">Add Dooraccess</div>
-        <div id="adddooraccess">
-          <div class="row p-3">
-            <div class="col-6">
-              <input mdbInput type="text"  class="fieldinputData_withmode form-control" id="fid_accesslevels_name"  placeholder="Enter Dooraccess">
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <div class="col-2">In</div>
-                <div class="col-10">
-                  <input mdbInput type="text" size="xs"  class="fieldinputData_withmode  form-control" id="fid_accesslevels_inid"  placeholder="Enter In ID">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-2">Out</div>
-                <div class="col-10">
-                  <input mdbInput type="text" size="xs"  (keydown.enter)="addDatabyadminpanel('accesslevels','','withmode')" class="fieldinputData_withmode  form-control" id="fid_accesslevels_outid"  placeholder="Enter Out ID">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="scrollingEffect scrollbar">
-          <div *ngFor="let dooraccessmanual of exportadminpagedata.Accesslevels" class="overflow text-white font-weight-bold">
-          <div class="row p-3">
-            <div class="col-10 text-white">
-              <div class="row p-2">
-                <div class="col-4">Name: {{dooraccessmanual.data}}</div>
-                <div class="col-4">In Id: {{dooraccessmanual.inid}}</div>
-                <div class="col-4">Out Id: {{dooraccessmanual.outid}}</div>
-              </div>
-            </div>
-            <div class="col-2">
-              <a #removeDetail name={{dooraccessmanual.id}} (click)="removeDataadminpanel(removeDetail.name,'accesslevels')">
-                <mdb-icon class="deletedatainfo" fas icon="minus-circle"></mdb-icon>
-              </a>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-xs-12">
-      <p>Docaccess <mdb-icon fas icon="file-alt"></mdb-icon>
-        <button mdbBtn type="button" size="sm" color="white" rounded="true" outline="true"
-          (click)="default('Documents_accesslevels','defaultview')" mdbWavesEffect>Default</button>
-      </p>
-      <div id="defaultsection_Documents_accesslevels" class="defaultsection z-depth-3 defaultmode">
-        <div class="canceldefault p-2 text-right">
-          <mdb-icon fas icon="backspace"  (click)="default('Documents_accesslevels','defaulthide')" class="text-white"></mdb-icon>
-        </div>
-        <div class="scrollbar">
-          <div class="overflow text-white text-left p-2 m-3" *ngFor="let defaultdoc of exportdefaultdata.Documents_accesslevels">
-            <div class="row">
-              <div class="col-8"> {{defaultdoc.name}}</div>
-              <div class="col-4">
-                <a #docdefault name={{defaultdoc.name}} (click)="defaultAdd(docdefault.name,'name','Documents_accesslevels')">
-                  <mdb-icon class="adddefaulticon" fas icon="plus-circle"></mdb-icon>
-                 </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="viewmanual_Documents_accesslevels" class="z-depth-3 manualmode">
-        <div class="p-3">Add Documentaccess</div>
-        <div id="adddocument">
-          <div class="row p-3">
-            <div class="col-12">
-              <input mdbInput type="text" (keydown.enter)="addDatabyadminpanel('documents_accesslevels','name','withoutmode')" class="fieldinputData form-control" id="fid_documents_accesslevels"  placeholder="Enter Documentaccess">
-            </div>
-          </div>
-        </div>
-        <div class="scrollingEffect scrollbar">
-          <div *ngFor="let documentaccessmanual of exportadminpagedata.Documents_accesslevels" class="overflow text-white font-weight-bold">
-          <div class="row p-3">
-            <div class="col-10 text-white">{{documentaccessmanual.data}}</div>
-            <div class="col-2">
-              <a #removeDetail name={{documentaccessmanual.id}} (click)="removeDataadminpanel(removeDetail.name,'Documents_accesslevels')">
-                <mdb-icon class="deletedatainfo" fas icon="minus-circle"></mdb-icon>
-              </a>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
+  <div class="row p-4"> 
+    <div class="col-4 text-white" *ngFor="let userdata of exportadminpagedata">
+      <p class="text-center"><mdb-icon fas icon="{{userdata.icon}}"></mdb-icon> {{userdata.title}}</p>
     </div>
   </div>
 </div>
