--- a/l200207/frontEndCleanShrad/src/styles.scss
+++ b/l200207/frontEndCleanShrad/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~fullcalendar/dist/fullcalendar.min.css';
 body{
     overflow:hidden;
     box-sizing: content-box;
